update: implementation section in tex

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -72,26 +72,34 @@ author = {François Vigneau and André F. Caissie and Douglas A. Bors},
 abstract = {Taking into account various models and findings pertaining to the nature of analogical reasoning, this study explored quantitative and qualitative individual differences in intelligence using latency and eye-movement data. Fifty-five university students were administered 14 selected items of the Raven's Advanced Progressive Matrices test. Results showed that individuals differed in terms of speed, but also in terms of differences in strategies. More specifically, higher and lower ability subjects differed in terms of their patterns of item and matrix inspections, and several strategic indices (proportional time on matrix, number of alternations between matrix and response choice, latency to first alternation, matrix time distribution) emerged in regression analyses as significant predictors of Raven performance. Given the high reliabilities associated with these strategic indices, it is argued that these results provide evidence against a strong basic-information-processing view and supports a multifaceted view of individual differences in intelligence that includes differences in strategies.}
 }
 
-@article{Mayn_2024,
-  title={Beliefs about the speaker’s reasoning ability influence pragmatic interpretation: Children and adults as speakers},
-  author={Mayn, Alexandra and Loy, Jia E and Demberg, Vera},
-  year={2024},
-  publisher={OSF}
+@article{Mayn_2025,
+    author = {Mayn, Alexandra and Loy, Jia E. and Demberg, Vera},
+    title = {Beliefs About the Speaker’s Reasoning Ability Influence Pragmatic Interpretation: Children and Adults as Speakers},
+    journal = {Open Mind},
+    volume = {9},
+    pages = {89-120},
+    year = {2025},
+    month = {01},
+    abstract = {The cooperative principle states that communicators expect each other to be cooperative and adhere to rational conversational principles. Do listeners keep track of the reasoning sophistication of the speaker and incorporate it into the inferences they derive? In two experiments, we asked participants to interpret ambiguous messages in the reference game paradigm, which they were told were sent either by another adult or by a 4-year-old child. We found an effect of speaker identity: if sent by an adult, an ambiguous message was much more likely to be interpreted as an implicature, while if sent by a child, it was a lot more likely to be interpreted literally. We also observed substantial individual variability, which points to different beliefs and strategies among our participants. We discuss how these speaker effects can be modeled in the Rational Speech Act framework.},
+    issn = {2470-2986},
+    doi = {10.1162/opmi_a_00180},
+    url = {https://doi.org/10.1162/opmi\_a\_00180},
+    eprint = {https://direct.mit.edu/opmi/article-pdf/doi/10.1162/opmi\_a\_00180/2498849/opmi\_a\_00180.pdf},
 }
+
 
 @article{Mayn_2023,
     author = {Mayn, Alexandra and Demberg, Vera},
-    title = "{High Performance on a Pragmatic Task May Not Be the Result of Successful Reasoning: On the Importance of Eliciting Participants’ Reasoning Strategies}",
+    title = {High Performance on a Pragmatic Task May Not Be the Result of Successful Reasoning: On the Importance of Eliciting Participants’ Reasoning Strategies},
     journal = {Open Mind},
     volume = {7},
     pages = {156-178},
     year = {2023},
     month = {06},
-    abstract = "{Formal probabilistic models, such as the Rational Speech Act model, are widely used for formalizing the reasoning involved in various pragmatic phenomena, and when a model achieves good fit to experimental data, that is interpreted as evidence that the model successfully captures some of the underlying processes. Yet how can we be sure that participants’ performance on the task is the result of successful reasoning and not of some feature of experimental setup? In this study, we carefully manipulate the properties of the stimuli that have been used in several pragmatics studies and elicit participants’ reasoning strategies. We show that certain biases in experimental design inflate participants’ performance on the task. We then repeat the experiment with a new version of stimuli which is less susceptible to the identified biases, obtaining a somewhat smaller effect size and more reliable estimates of individual-level performance.}",
+    abstract = {Formal probabilistic models, such as the Rational Speech Act model, are widely used for formalizing the reasoning involved in various pragmatic phenomena, and when a model achieves good fit to experimental data, that is interpreted as evidence that the model successfully captures some of the underlying processes. Yet how can we be sure that participants’ performance on the task is the result of successful reasoning and not of some feature of experimental setup? In this study, we carefully manipulate the properties of the stimuli that have been used in several pragmatics studies and elicit participants’ reasoning strategies. We show that certain biases in experimental design inflate participants’ performance on the task. We then repeat the experiment with a new version of stimuli which is less susceptible to the identified biases, obtaining a somewhat smaller effect size and more reliable estimates of individual-level performance.},
     issn = {2470-2986},
     doi = {10.1162/opmi_a_00077},
-    url = {https://doi.org/10.1162/opmi\_a\_00077},
-    eprint = {https://direct.mit.edu/opmi/article-pdf/doi/10.1162/opmi\_a\_00077/2133855/opmi\_a\_00077.pdf},
+    url = {https://doi.org/10.1162/opmi\_a\_00077}
 }
 
 @article{Grice_meaning,
