update: implementation in tex

--- a/tex/references.bib
+++ b/tex/references.bib
@@ -102,6 +102,13 @@ abstract = {Taking into account various models and findings pertaining to the na
     url = {https://doi.org/10.1162/opmi\_a\_00077}
 }
 
+@article{pandas,
+  title={pandas-dev/pandas: Pandas 1.0. 5},
+  author={Reback, Jeff and McKinney, Wes and Van Den Bossche, Joris and Augspurger, Tom and Cloud, Phillip and Klein, Adam and Hawkins, Simon and Roeschke, Matthew and Tratner, Jeff and She, Chang and others},
+  journal={Zenodo},
+  year={2020}
+}
+
 @article{Grice_meaning,
  ISSN = {00318108, 15581470},
  URL = {http://www.jstor.org/stable/2182440},
@@ -125,7 +132,20 @@ abstract = {Taking into account various models and findings pertaining to the na
   year={1975}
 }
 
-@inproceedings{wegbazer,
+@software{fixation_detection,
+  author       = {Titus von der Malsburg},
+  title        = {Saccades: An R package for detecting fixations in
+                   raw eye tracking data
+                  },
+  month        = oct,
+  year         = 2015,
+  publisher    = {Zenodo},
+  version      = {v0.1},
+  doi          = {10.5281/zenodo.31799},
+  url          = {https://doi.org/10.5281/zenodo.31799},
+}
+
+@inproceedings{webgazer,
   author = {Alexandra Papoutsaki and Patsorn Sangkloy and James Laskey and Nediyana Daskalova and Jeff Huang and James Hays},
   title = {WebGazer: Scalable Webcam Eye Tracking Using User Interactions},
   booktitle = {Proceedings of the 25th International Joint Conference on Artificial Intelligence (IJCAI)},
