add: cnn training on complex trials

--- a/analysis/preprocessing_and_init_analysis.ipynb
+++ b/analysis/preprocessing_and_init_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,13 +113,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "102"
+       "np.float64(17.65015002615212)"
       ]
      },
      "execution_count": 3,
@@ -128,7 +128,8 @@
     }
    ],
    "source": [
-    "df"
+    "df = pd.read_csv('data/final_datasets/final_experiment_participants_extended.csv')\n",
+    "df['gazeSamplingRateHz'].mean()"
    ]
   },
   {
@@ -141,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -163,30 +164,28 @@
    ],
    "source": [
     "# ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-    "participant = df['workerid'].unique()[0]\n",
-    "participant_df = df[df['workerid'] == participant]\n",
-    "# participant_df = participant_df.iloc[4]\n",
-    "# for participant in df['workerid']:\n",
-    "    # participant_df = df[df['workerid'] == participant]\n",
-    "participant_df.reset_index(drop=True, inplace=True)\n",
-    "x = participant_df['gaze'].apply(lambda gaze: [gaze[key]['x'] for key in gaze.keys()])\n",
-    "y = participant_df['gaze'].apply(lambda gaze: [gaze[key]['y'] for key in gaze.keys()])\n",
-    "time = participant_df['gaze'].apply(lambda gaze: [int(key) for key in gaze.keys()])\n",
-    "# shift all values to remove negative values\n",
-    "time = time.apply(lambda x: [i - min(x) for i in x])\n",
-    "prep_df = pd.DataFrame({'trial': participant_df['userTrialId'],'x': x, 'y': y, 'time': time})\n",
-    "prep_df = prep_df.explode(['x','y','time'])\n",
-    "prep_df.sort_values(by=['trial', 'time'], inplace=True)\n",
-    "prep_df.to_csv(f'data/participants_raw_gaze/{participant}.csv', index=False)\n",
-    "\n",
-    "import subprocess\n",
-    "subprocess.call(\"/usr/bin/Rscript --vanilla ~/uds/thesis/Thesis-Project/analysis/fixations.r\", shell=True)\n",
     "\n",
     "# for participant in df['workerid']:\n",
-    "participant_fixations = pd.read_csv(f'analysis/data/participants_fixations/{participant}.csv')\n",
-    "fixations = participant_fixations.groupby('trial').apply(lambda x: x.to_dict(orient='records')).to_dict()\n",
-    "print(fixations)\n",
-    "df.loc[df['workerid'] == participant, 'fixations'] = df[df['workerid'] == participant]['userTrialId'].apply(lambda x: fixations[x] if x in fixations else [])\n",
+    "#     participant_df = df[df['workerid'] == participant]\n",
+    "#     participant_df.reset_index(drop=True, inplace=True)\n",
+    "#     x = participant_df['gaze'].apply(lambda gaze: [gaze[key]['x'] for key in gaze.keys()])\n",
+    "#     y = participant_df['gaze'].apply(lambda gaze: [gaze[key]['y'] for key in gaze.keys()])\n",
+    "#     time = participant_df['gaze'].apply(lambda gaze: [int(key) for key in gaze.keys()])\n",
+    "#     # shift all values to remove negative values\n",
+    "#     time = time.apply(lambda x: [i - min(x) for i in x])\n",
+    "#     prep_df = pd.DataFrame({'trial': participant_df['userTrialId'],'x': x, 'y': y, 'time': time})\n",
+    "#     prep_df = prep_df.explode(['x','y','time'])\n",
+    "#     prep_df.sort_values(by=['trial', 'time'], inplace=True)\n",
+    "#     prep_df.to_csv(f'data/participants_raw_gaze/{participant}.csv', index=False)\n",
+    "\n",
+    "# import subprocess\n",
+    "# subprocess.call(\"/usr/bin/Rscript --vanilla ~/uds/thesis/Thesis-Project/analysis/fixations.r\", shell=True)\n",
+    "\n",
+    "# for participant in df['workerid']:\n",
+    "#     participant_fixations = pd.read_csv(f'analysis/data/participants_fixations/{participant}.csv')\n",
+    "#     fixations = participant_fixations.groupby('trial').apply(lambda x: x.to_dict(orient='records')).to_dict()\n",
+    "#     print(fixations)\n",
+    "#     df.loc[df['workerid'] == participant, 'fixations'] = df[df['workerid'] == participant]['userTrialId'].apply(lambda x: fixations[x] if x in fixations else [])\n",
     "    "
    ]
   },
@@ -199,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,6 +261,7 @@
     "df['propTimeOnCompSimple'] = df['timeOnCompSimple'] / df['timeOnTrial']\n",
     "df['propTimeOnCompComplex'] = df['timeOnCompComplex'] / df['timeOnTrial']\n",
     "df['propTimeOnCompUnambiguous'] = df['timeOnCompUnambiguous'] / df['timeOnTrial']\n",
+    "df['gazeSamplingRateHz'] = 1000 * df['timeOnTrial'] / df['answerTime']\n",
     "\n",
     "msg_type = {'ci': 'shape',\n",
     "            'sq': 'shape',\n",
@@ -280,6 +280,7 @@
     "\n",
     "dict_list_columns = ['objs', 'msgsOrder', 'calibrationPrecision', 'gaze', 'coordinates', 'deviceInfo']\n",
     "\n",
+    "# convert dicts and lists to json strings to save to csv\n",
     "for dict_column in dict_list_columns:\n",
     "    df[dict_column] = df[dict_column].apply(lambda x: json.dumps(x))\n",
     "\n",
@@ -343,6 +344,23 @@
     "    else:\n",
     "        return pd.DataFrame({'Subject': subject, 'Trial': trial, 'Condition': condition, 'MsgType': msg_type, 'TrgtPos': trgt_pos, 'Time': time, 'Correct': correct, 'AOI': aois})\n",
     "pd.concat(np.array(gaze_df.apply(lambda x: explode_gaze(x), axis=1)).flatten(), axis=0).to_csv(f'data/final_datasets/{df_name}_{'correct_' if filter_correct else ''}fixations.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.65015002615212\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['gazeSamplingRateHz'].mean())"
    ]
   },
   {
@@ -711,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -748,6 +766,7 @@
     "                        'answerAccuracySimple',\n",
     "                        'answerAccuracyComplex',\n",
     "                        'answerAccuracyUnambiguous',\n",
+    "                        'gazeSamplingRateHz',\n",
     "                     ]\n",
     "final_df = df.groupby('workerid', sort=False, as_index=False)[final_df_features].mean()\n",
     "# Save the final df\n",
@@ -787,27 +806,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      None\n",
-       "1      None\n",
-       "2      None\n",
-       "3      None\n",
-       "4      None\n",
-       "       ... \n",
-       "375    None\n",
-       "376    None\n",
-       "377    None\n",
-       "378    None\n",
-       "379    None\n",
-       "Length: 380, dtype: object"
+       "0       None\n",
+       "1       None\n",
+       "2       None\n",
+       "3       None\n",
+       "4       None\n",
+       "        ... \n",
+       "3871    None\n",
+       "3872    None\n",
+       "3873    None\n",
+       "3874    None\n",
+       "3875    None\n",
+       "Length: 3876, dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,9 +871,9 @@
     "    plt.gca().invert_yaxis()\n",
     "    plt.axis('off')\n",
     "    plt.tight_layout()\n",
-    "    os.makedirs(f'data/gaze_plots/pilot/{condition}/{correct}/{workerid}/', exist_ok=True)\n",
+    "    os.makedirs(f'data/gaze_plots/{condition}/{correct}/{workerid}/', exist_ok=True)\n",
     "    # resize output image to 400x400 before saving\n",
-    "    plt.savefig(f'data/gaze_plots/pilot/{condition}/{correct}/{workerid}/{workerid}_{condition}_{trial_id}_{correct}.png', bbox_inches=\"tight\", transparent=True, pad_inches=0)\n",
+    "    plt.savefig(f'data/gaze_plots/{condition}/{correct}/{workerid}/{workerid}_{condition}_{trial_id}_{correct}.png', bbox_inches=\"tight\", transparent=True, pad_inches=0)\n",
     "    plt.close()\n",
     "\n",
     "df.apply(lambda x: gen_plot(x['workerid'], x['userTrialId'], x['gaze'], x['coordinates'], x['trgtPos'], x['compPos'], x['condition'], x['correct']), axis=1)\n"
