--- a/tex/sections/c0/header.tex
+++ b/tex/sections/c0/header.tex
@@ -20,6 +20,8 @@
 \usepackage{amsfonts}   % for math fonts
 \usepackage{calc}
 \usepackage[natbibapa]{apacite}
+\usepackage{floatrow}
+
 
 \newlength\myheight
 \newlength\mydepth
@@ -45,7 +47,7 @@
 
 \newcommand{\TODO}[1]{\hspace{-1.45cm}\textcolor{red}{ \textbf{TODO: #1}}}
 \newcommand{\ITODO}[1]{\textcolor{red}{ \textbf{TODO: #1}}}
-
+\newfloatcommand{capbtabbox}{table}[][\FBwidth]
 
 
 
