--- a/tex/sections/implementation.tex
+++ b/tex/sections/implementation.tex
@@ -14,7 +14,7 @@ The trials were generated using 3 colors: red, green and blue, and 3 shapes: squ
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{images/example_trial_webcam.png}
+    \fbox{\includegraphics[width=0.8\textwidth]{images/example_trial_webcam.png}}
     \caption{Example trial}
     \label{fig:example_trial_webcam}
 \end{figure}
@@ -23,11 +23,11 @@ Before the main part of the experiment with 36 + 2 trials, the participants were
 
 \subsection{Eye Tracking}
 \label{sec:data:eyetr}
-The eye tracking was done via library WebGazer \cite{webgazer}. The library was used to track participants' gaze on the screen. There was a calibration in the beginning of the experiment after the practice trials where participants did the speaker's job, this allowed to put the calibration as close to the main experiment as possible. The calibration was adapted from the one used in the demo of WebGazer \cite{webgazer}. Although, we included 11 points instead of 9, the additional points were put on the objects' places. Each point had to be clicked 5 times. The setup can be seen in \autoref{fig:calibration_webcam}.In addition, the calibration accuracy assessment in the end was done not with 1 point but 3: middle, left and right. Where left and right again correspond to the positions of the main objects on the screen. Furthermore, an in-between trial calibration was incorporated to ensure that the calibration was still accurate. The number of points were reduced to 5 each point corresponding to one of the areas of interest. No accuracy assessment was done during the in-between trial calibration. The setup can be seen in \autoref{fig:inbetween_calibration_webcam}.
+The eye tracking was done via library WebGazer \cite{webgazer}. The library was used to track participants' gaze on the screen. There was a calibration in the beginning of the experiment after the practice trials where participants did the speaker's job, this allowed to put the calibration as close to the main experiment as possible. The calibration was adapted from the one used in the demo of WebGazer \cite{webgazer}. Although, we included 11 points instead of 9, the additional points were put on the objects' places. Each point had to be clicked 5 times. The setup can be seen in \autoref{fig:calibration_webcam}.In addition, the calibration accuracy assessment in the end was done not with 1 point but 3: middle, left and right. Where left and right again correspond to the positions of the main objects on the screen. Furthermore, an in-between trial calibration was incorporated to ensure that the calibration was still accurate. The number of points were reduced to 5 each point corresponding to one of the areas of interest. No accuracy assessment was done during the in-between trial calibration. The setup can be seen in \autoref{fig:inbetween_calibration_webcam}. In order to make the first fixation after the in-between calibration more predictable, the top point, that corresponds to the sent message, was not available until all the other points were clicked on. This way participants would enter the trial looking at the sent message which is we expected to be the first point of interest. The sent message gives crucial information about the trial without which it is impossible to solve the task.
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{images/calibration_webcam.png}
+    \fbox{\includegraphics[width=0.8\textwidth]{images/calibration_webcam.png}}
     \caption{Calibration setup}
     \label{fig:calibration_webcam}
 \end{figure}
@@ -40,7 +40,7 @@ Furthermore, a performance issue arised during the pilot phase. The issues was t
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.8\textwidth]{images/inbetween_calibration_webcam.png}
+    \fbox{\includegraphics[width=0.8\textwidth]{images/inbetween_calibration_webcam.png}}
     \caption{In-between trial calibration}
     \label{fig:inbetween_calibration_webcam}
 \end{figure}
@@ -81,42 +81,97 @@ The data preprocessing was done in Python using the pandas library \cite{pandas}
 
 The polygons were defined using the following variables: 
 \begin{itemize}
-    \item $x_{12}$ - x coordinate equally distant between the left and the center images of the objects.
-    \item $x_{23}$ - x coordinate equally distant between the center and the right images of the objects.
-    \item $y_{12}$ - y coordinate equally distant between the sent message image and the center object image.
-    \item $y_{23}$ - y coordinate equally distant between the center object image and the available messages images.
+    \item $x_{12}$ -- x coordinate equally distant between the left and the center images of the objects.
+    \item $x_{23}$ -- x coordinate equally distant between the center and the right images of the objects.
+    \item $y_{12}$ -- y coordinate equally distant between the sent message image and the center object image.
+    \item $y_{23}$ -- y coordinate equally distant between the center object image and the available messages images.
 \end{itemize}
-I is worth to note that the values of the variables can be easily computed using the coordinates of left top corner of an image and its' width and height. Finally, the polygons were defined via four points as follows:
+It is worth to note that the values of the variables can be easily computed using the coordinates of left top corner of an image and its' width and height. Finally, the polygons were defined via four points as follows:
 \begin{itemize}
-    \item sent message - $((\frac{x_{23}+x_{12}}{2}, 0), (\frac{x_{12}}{2}, 0), (x_{12}, y_{12}), (x_{23}, y_{12}))$
-    \item left object  - $((0, \frac{y_{12}}{2}), (x_{12}, y_{12}), (x_{12}, y_{23}), (0, \frac{y_{23}+y_{12}}{2}))$
-    \item center object - $((x_{12}, y_{12}), (x_{23}, y_{12}), (x_{23}, y_{23}), (x_{12}, y_{23}))$
-    \item right object - $((x_{23}, y_{12}), (x_{12}+x_{23}, \frac{y_{12}}{2}), (x_{12}+x_{23}, y_{23}+\frac{y_{12}}{2}), (x_{23}, y_{23}))$
-    \item available messages - $((x_{12}, y_{23}), (x_{23}, y_{23}), (\frac{x_{23}+x_{12}}{2}, y_{12}+y_{23}), (\frac{x_{12}}{2}, y_{12}+y_{23}))$
+    \item sent message -- $((\frac{x_{23}+x_{12}}{2}, 0), (\frac{x_{12}}{2}, 0), (x_{12}, y_{12}), (x_{23}, y_{12}))$
+    \item left object  -- $((0, \frac{y_{12}}{2}), (x_{12}, y_{12}), (x_{12}, y_{23}), (0, \frac{y_{23}+y_{12}}{2}))$
+    \item center object -- $((x_{12}, y_{12}), (x_{23}, y_{12}), (x_{23}, y_{23}), (x_{12}, y_{23}))$
+    \item right object -- $((x_{23}, y_{12}), (x_{12}+x_{23}, \frac{y_{12}}{2}), (x_{12}+x_{23}, y_{23}+\frac{y_{12}}{2}), (x_{23}, y_{23}))$
+    \item available messages -- $((x_{12}, y_{23}), (x_{23}, y_{23}), (\frac{x_{23}+x_{12}}{2}, y_{12}+y_{23}), (\frac{x_{12}}{2}, y_{12}+y_{23}))$
 \end{itemize}
 \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{images/polygons.png}
-    \caption{Polygons for the areas of interest}
+    \caption{Polygons for the areas of interest. The inner rectangles show the exact positions of the images on the participant's screen. The outer rectangles show the polygons used to define the areas of interest.}
     \label{fig:polygons}
 \end{figure}
 The visualization is shown in \autoref{fig:polygons}. 
 
+\begin{figure}
+    \begin{subfigure}{1\textwidth}
+        \centering
+        \includegraphics[width=0.7\textwidth]{images/fixations.png}
+        \caption{Fixations}
+        \label{fig:fixations}
+    \end{subfigure}
+    \begin{subfigure}{1\textwidth}
+        \centering
+        \includegraphics[width=0.7\textwidth]{images/scanpath.png}
+        \caption{Scanpath}
+        \label{fig:scanpath}
+    \end{subfigure}
+    \caption{Comparison of the raw scanpath (b) and the detected fixations (a). The hue of the points corresponds to the order of the points. Black being the first point and the pure point being the last. In addition, the very last point is marked with a red square.}
+    \label{fig:fixations_scanpath}
+\end{figure}
+
 \subsection{Eye Tracking Features}
 \label{sec:analysis:eyetr}
-Based on whether a point was inside a certain polygon or none of them it was assigned to the corresponding area of interest or to the non-area of interest category. Each point was not represented by the time between the current and the previous point as the rate of sampling was not the same across participants. In order to mitigate this issue a fixation detection algorithm was tried out. The algorithm is implemented in R \cite{fixation_detection}. 
+Based on whether a point was inside a certain polygon or none of them it was assigned to the corresponding area of interest or to the non-area of interest category. Each point was not represented by the time between the current and the previous point as the rate of sampling was not the same across participants. In order to mitigate this issue a fixation detection algorithm was tried out. The algorithm is implemented in R \cite{fixation_detection}. The algorithm is based on the fact that due to a fixation present some points would be close to each other while the rest would be far away. The algorithm states to work well even for a low quality data with sampling rate less than 100 Hz. However, in our case an average sampling rate amounted to 17.65 Hz. Even with the lowest tolerance, the algorithm was not able to detect all fixations accurately due to the low sampling rate. An example of fixation detection and the original scanpath can be seen in \autoref{fig:fixations_scanpath}. Here, the algorithm correctly detected 4 fixations, they are: on the sent message, twice on the bank of available messages and the last one being on the right object. While the second fixations of the available messages is debatable, clearly the algorithm was not able to detect the quick glance on the middle object before the last fixation on the right object. Clearly, the sampling rate was too low in order to determine the fixations accurately. Hence, the algorithm was not used in the analysis. 
+
+\begin{figure}
+    \centering
+    \begin{floatrow}
+    \ffigbox{%
+      \includegraphics[width=0.48\textwidth]{images/scanpath.png}
+    }{%
+      \caption{Scanpath of a simple trial, and the layout of areas of interest. The colors of the main objects are used as follows: green -- target, yellow -- competitor and red -- distractor.}%
+      \label{fig:features_scanpath}
+    }
+    \capbtabbox{%
+    \begin{tabular}{|l|c|}
+    \hline
+    Feature & Value \\ \hline
+    TimeOnSentMsg & 18 \\ 
+    TimeOnAvailableMsgs & 27 \\ 
+    TimeOnTrgt & 14 \\ 
+    TimeOnDist & 0 \\ 
+    TimeOnComp & 9 \\ 
+    TimeOnNonAOI & 0 \\ 
+    PropTimeOnSentMsg & 0.26 \\ 
+    PropTimeOnAvailableMsgs & 0.4 \\ 
+    PropTimeOnTrgt & 0.21 \\ 
+    PropTimeOnDist & 0.0 \\ 
+    PropTimeOnComp & 0.13 \\ 
+    PropTimeOnNonAOI & 0.0 \\ \hline
+    \end{tabular}
+    }{%
+      \caption{Features and their corresponding values. The features starting from `time' corresponds to amount of points in the area of interest.}%
+      \label{tab:features}
+    }
+    \end{floatrow}
+\end{figure}
+
+Instead of using the algorithm, we decided to use the raw scanpath and derive the features from it. We assign each predicted gaze point to the corresponding area of interest. Then count the amount of them in each area of interest. This way we derive absolute time on area of interest. Again, it is worth mentioning that we did not use the actual timings of the predictions because the sampling rate varied a lot across the participants. Hence, we used the amount of points in each area of interest as a proxy for the time spent on it. Furthermore, we calculated the proportional time on area of interest as the amount of points in the area of interest divided by the total amount of points in the trial, including the ones that missed the areas of interest. The proportional time on area of interest is the main feature used in this thesis. An example of calculated features for the scanpath in \autoref{fig:features_scanpath} can be seen in \autoref{tab:features}.
+
+
 
 \subsection{Pairwise Correlations}
 \label{sec:analysis:corr}
+Similarly to \cite{Vigneau_2006}, we will report the pairwise correlations of eye tracking features and the accuracy based on condition. This should give us some general idea about what features are correlated with the accuracy. In addition, the correlation will test our hypothesis.
 
 \subsection{Mixed Effects Logistic Regressions}
 \label{sec:analysis:mixed_effects}
 
+The main analysis will be done using mixed effects logistic regressions. The models are designed to correspond to our hypothesis presented in \autoref{sec:research_questions}. For the hypothesis 1 and 2, the following model was preregistered:
+
+
 \subsection{Exploratory Analysis}
 \label{sec:analysis:exploratory}
-
-\subsubsection{Clustering}
-\label{sec:analysis:exploratory:clustering}
 
 \subsubsection{CNNs}
 \label{sec:analysis:exploratory:cnn}
